--- a/trivia-game/styles.css
+++ b/trivia-game/styles.css
@@ -1,5 +1,7 @@
 body {
-  background-color: cornsilk;
+  background-image:url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/14/76/11566972a0785e9.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 h1 {
   text-align: center;
@@ -19,8 +21,8 @@ h2 {
 }
 
 .question {
-  width: 500px;
-  height: 300px;
+  width: 600px;
+  height: 450px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding: 10px;
   box-sizing: border-box;
@@ -29,7 +31,12 @@ h2 {
   margin-top: 10px;
   text-align: center;
 }
-
+.question-image {
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  width: 100%;
+}
 .box {
   width: 300px;
   height: 100px;
