--- a/trivia-game/styles.css
+++ b/trivia-game/styles.css
@@ -2,6 +2,7 @@ body {
   background-image:url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/14/76/11566972a0785e9.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 h1 {
   text-align: center;
@@ -22,7 +23,7 @@ h2 {
 
 .question {
   width: 600px;
-  height: 450px;
+  height: 400px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding: 10px;
   box-sizing: border-box;
@@ -30,12 +31,17 @@ h2 {
   margin: 0 auto;
   margin-top: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 .question-image {
-  display: block;
+  display: flex;
+  flex-grow: 1;
   margin: 0 auto;
-  max-height: 100%;
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 .box {
   width: 300px;
@@ -47,17 +53,21 @@ h2 {
   background-color: white;
   margin-top: 10px;
 }
-
-button {
+.nav {
+  margin: 10px auto;
+  text-align: center;
+}
+.nav-btn {
   background-color: white;
   border: none;
   color: black;
   text-align: center;
   text-decoration: none;
-  display: block;
   font-size: 10px;
-  margin: auto;
-  margin-top: 15px;
+  margin: 5px;
+  display: inline-block;
+  width: 150px;
+  padding:10px;
 }
 .box:hover {
   color: red;
