--- a/trivia-game/styles.css
+++ b/trivia-game/styles.css
@@ -1,15 +1,21 @@
-body {
-  background-image:url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/14/76/11566972a0785e9.jpg);
+html {
+  background-image: url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/14/76/11566972a0785e9.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  height: 100%;
 }
 h1 {
   text-align: center;
+  text-shadow: 2px 2px 1px #3f3f3f;
+  color: red;
+  font-size: 36px;
 }
 
 h2 {
   text-align: center;
+  text-shadow: 2px 2px 1px #3f3f3f;
+  color: red;
 }
 
 .boxes {
@@ -27,12 +33,21 @@ h2 {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding: 10px;
   box-sizing: border-box;
-  background-color: white;
+  background-color: red;
   margin: 0 auto;
   margin-top: 10px;
   text-align: center;
   display: flex;
   flex-direction: column;
+  border: 4px solid gold;
+}
+.question-prompt {
+  color: gold;
+}
+.question-number {
+  color: gold;
+  font-weight: bold;
+
 }
 .question-image {
   display: flex;
@@ -44,14 +59,17 @@ h2 {
   background-position: center;
 }
 .box {
-  width: 300px;
-  height: 100px;
+  width: 250px;
+  height: 50px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding: 10px;
   box-sizing: border-box;
   margin: auto;
-  background-color: white;
+  background-color:red;
+  border: 4px solid gold;
   margin-top: 10px;
+  cursor: pointer;
+  color: gold;
 }
 .nav {
   margin: 10px auto;
@@ -67,8 +85,8 @@ h2 {
   margin: 5px;
   display: inline-block;
   width: 150px;
-  padding:10px;
+  padding: 10px;
 }
 .box:hover {
-  color: red;
+  font-weight: bold;
 }
