--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: 100%; /* If you remove this height property, the image will take up the whole background */
 }
+
 h1 {
   text-align: center;
   text-shadow: 2px 2px 1px #3f3f3f;
@@ -17,9 +18,9 @@ h2 {
   text-shadow: 2px 2px 1px #3f3f3f;
   color: red;
 }
-
+/* Good job keeping the element selectors at the top of your code */
 .boxes {
-  display: flex;
+  display: flex; /* Good use of flex */
   flex-wrap: wrap;
   max-width: 655px;
   margin: 0 auto;
@@ -27,7 +28,7 @@ h2 {
   text-align: center;
 }
 
-.question {
+.question { /* Probably move the questions above the .boxes selector since it comes first in the html */
   width: 600px;
   height: 400px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -82,10 +83,12 @@ h2 {
   text-decoration: none;
   font-size: 10px;
   margin: 5px;
-  display: inline-block;
+  display: inline-block;  /* I dont think this property is doing anything here */
   width: 150px;
   padding: 10px;
 }
 .box:hover {
   font-weight: bold;
 }
+
+/* Good job on the css too!  Great color scheme and playing into the theme */
